# FlyDSL

./: .buildinfo  .gitignore  ADDING_TARGET_STACK.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.manylinux_2_28  FLASH_ATTN_OPUS_Kernel_Analysis_Detail.md  FLASH_ATTN_OPUS_vs_CPP_Differences.md  FMHA_FP8_OPTIMIZATION_HANDOFF.md  FMHA_FP8_OPTIMIZE_PROMPT.md  MANIFEST.in  PF_FULL_PREFETCH_WORK_SUMMARY.md  README.html  README.md  after_build.sh  ana_trace.sh  architecture_guide.html  bench.py  bench_a16w4_moe_gemm2.py  bench_flydsl_16384.py  bench_kimi25_w4a16.sh  bench_kimi25_w4a16_flat.sh  bench_moe.sh  bench_moe_prefill.sh  bench_small_bm16.py  benchmark_moe.sh  bm_128_moe.py  build.sh  build_flydsl.sh  build_in_docker.sh  build_llvm.sh  check_gpu_and_baseline.sh  cute_layout_algebra_guide.html  decode_nt_cache.md  dispatch_combine_mixed_dtype_sweep.jsonl  dispatch_combine_mixed_dtype_sweep.md  dump_ir.sh  dump_pf_depth_isa.py  dump_quad_isa.sh  (+58 more)
.claude/: a8w4_pf_race_analysis.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: runner-config.yml
.pf_backup/: fp4_utils.py.ksplit-all-ok  gemm_fp8fp4_gfx1250.py.pre-defer-reuse  gemm_fp8fp4_gfx1250.py.pre-pipeline  gemm_fp8fp4_gfx1250.py.pre-stageC  gemm_fp8fp4_gfx1250.py.step1-descriptors  gemm_fp8fp4_gfx1250.py.step1c-wip  gemm_fp8fp4_gfx1250.py.working  gemm_fp8fp4_gfx1250.py.working-ABASscale-ok  pf_depth_debug.txt  test_gemm_fp8fp4_gfx1250.py.ksplit-all-ok  test_gemm_fp8fp4_gfx1250.py.working
_sources/: architecture_guide.md.txt  layout_system_guide.md.txt
api/: compiler.html  dsl.html  kernels.html
ci-dashboard/: README.md  app.js  index.html  styles.css
cmake/: FlyDSLBackends.cmake  FlyDSLBuildConfig.py.in  FlyDSLTargetStack.cmake  llvm-hash.txt
docker/: Dockerfile.manylinux_2_28
docs/: PassPipeline.md  architecture_guide.md  autotune_guide.md  baseline_523ca1c7_validated.csv  cdna3_mfma_instructions.md  chunk_gated_delta_rule_fwd_h_flow.md  chunk_gdn_fwd_h_perf_analysis.md  ci_rerun_commands.md  codegen_pass_plugin.md  conf.py  cute_layout_algebra_guide.md  extern_integration_guide.md  fp8_flash_attn_design.md  gdn_k5_optimization_v2.md  gdn_k5_perf_analysis.md  gdn_k5_wk_load_optimization.md  index.rst  installation.rst  kernel_authoring_guide.md  kernel_tuning_guide.md  kimi_fp4_moe_16384_dataflow.md  kimi_fp4_moe_16384_opt_notes.md  layout_system_guide.md  megamoe_consolidation.md  megamoe_merge_plan.md  moe_blockscale_optimization.md  moe_stage1_Optimize.md  moe_stage1_mega.md  moe_stage1_mega_notes.md  moe_stage1_overlap_design.md  mxfp4_moe_tuning.md  optimization-ledger.md  prebuilt_kernels_guide.md  quickstart.rst  testing_benchmarking_guide.md  windows_build_guide.md
examples/: 01-vector-add.py  01-vectorAdd.py  02-layout_algebra.py  02-tiledCopy.py  03-mma_atom.py  03-tiledMma.py  04-layout_algebra_logical_product.py  04-preshuffle_gemm.py  04-vectorAdd-jax.py  05-amdgpu_codegen_passes.py  05-gather_scatter.py  05-layout_right_inverse.py  05-tiledCopy-jax.py  06-tiledMma-jax.py  __init__.py  asan_debug_example.py  mxfp4_quant.py  mxfp4_quant_buffer_load.py  test_graph_capture.py
exp_isa/: .gitignore  __init__.py  build.sh  flash_attn_opus.v0.s  flash_attn_opus.v1.s  fmha_asm.py  fmha_asm_ext.cc  fmha_fwd_hd128_bf16_1tg_8w_256x64_350_msk0_gm0.s  fmha_fwd_hd128_bf16_1tg_8w_256x64_350_msk1_gm0.s  opus_asm.py  opus_asm_ext.cc  setup.py
experiments/: bf16_gemm_single_block.py
flir/: CMakeLists.txt  build.sh
flir/python_bindings/: CMakeLists.txt  FlirRegisterPasses.cpp  flir.py  setup_python_package.sh
flir/python_bindings/dialects/: FlirOps.td  flir.py
flir/python_bindings/flir_ir/: CMakeLists.txt  FlirIRModule.cpp  __init__.py  _mlir_libs_init.py
flir/python_bindings/mlir_proxies/: _mlirDialectsGPU.py  _mlirDialectsLLVM.py  _mlirExecutionEngine.py
flir/python_bindings/mlir_proxies/_mlir/: __init__.py  ir.py  passmanager.py  rewrite.py
flir/python_bindings/runtime/: FlirRocmRuntimeWrappers.cpp
flir/tools/flir-opt/: CMakeLists.txt  flir-opt.cpp
flydsl/: install_test_requirements.sh  requirements.txt  requirements_tests.txt
flydsl_/: requirements.txt
fmha_opt_tools/: GQA_D128_KERNEL_Analysis_Detail.md  ana_trace.sh  build_env_and_run_benchmark.sh  dump_opus_attn_thread_trace.sh  fmha_perf_compare_MI355X.shape1.csv  fmha_perf_compare_MI355X.shape2.csv  input_opus_attn_thread_trace.yaml  input_opus_gqa_d128_thread_trace.yaml  run.sh  trace_segment_cycles.py  tt_cpp_opus_gqa_d128.yaml  tt_dualwave_swp.yaml  tt_hand_asm.yaml
heliosr-1b114-d02-2/: 146104_results.db  175566_gfx1250_code_object_id_3.out
ir_dump/: 00_origin_ir.mlir  02_FlyCanonicalizePass.mlir  03_FlyLayoutLoweringPass.mlir  04_FlyToROCDLConversionPass.mlir  05_Canonicalizer.mlir  06_SCFToControlFlowPass.mlir  07_ConvertGpuOpsToROCDLOps.mlir  08_GpuROCDLAttachTarget.mlir  11_FlyGpuStreamMarkPass.mlir  12_GpuToLLVMConversionPass.mlir  13_FlyGpuStreamInjectPass.mlir  17_GpuModuleToBinaryPass.mlir
kernels/: __init__.py  _internode_v1ll_combine_impl.py  a8w4_moe_gemm_2stage.py  aiter_signal_all_reduce_raw.py  bf16_gemm.py  blockscale_gemm_gfx1250.py  blockscale_preshuffle_gemm.py  bmm_a16w8_gfx1250.py  bmm_a16w8_perf.md  bmm_compute_model.py  bmm_gfx1250.py  bmm_requirements.md  bmm_status.md  chunk_gated_delta_h.py  chunk_gated_delta_rule_fwd_h_opt3.py  communication_ops_utils.py  conv2d_implicit_mfma.py  conv3d_implicit_8wave.py  conv3d_implicit_8wave_fp8.py  custom_all_reduce.py  custom_all_reduce_kernel.py  dispatch_combine_internode_v1ll_combine.py  dispatch_combine_internode_v1ll_combine_kernel.py  dispatch_combine_internode_v1ll_copy_staging.py  dispatch_combine_internode_v1ll_dispatch.py  fa_gfx1250.py  (+200 more)
lib/Runtime/ROCm/: CMakeLists.txt  FlyRocmRuntimeWrappers.cpp
python/mlir_flydsl/: CMakeLists.txt  FlyRegisterEverything.cpp  FlyRegisterEverything.cpp.in  flydsl_exports.ld
python/mlir_flydsl/dialects/: FlyOps.td  FlyROCDL.td  fly.py  fly_rocdl.py
tools/cute-opt/: CMakeLists.txt  cute-opt.cpp
tools/fly-llc/: CMakeLists.txt  fly-llc.cpp
tools/fly-opt/: CMakeLists.txt  fly-opt.cpp
(+1379 files in other folders)
